# AutoChurnResearch

./: README.md  linkedin-article.md  results.tsv
autochurn/: .gitignore  REPORT.md  experiment.py  prepare.py  program.md  pyproject.toml  requirements.txt
autochurn/tests/: test_experiment_output.py  test_prepare.py
docs/superpowers/plans/: 2026-04-12-autochurn-experiment.md
docs/superpowers/specs/: 2026-04-12-autochurn-experiment-design.md
