[project]
name = "autochurn"
version = "0.1.0"
description = "Autonomous churn prediction experiment framework"
requires-python = ">=3.11"
dependencies = [
    "kagglehub",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "imbalanced-learn",
    "pandas",
    "numpy",
    "pytest",
    "neo4j",
]
